--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Simon Game</title>
 </head>
@@ -13,7 +16,7 @@
 <body>
     <div class="container">
         <div class="game-text">
-            <h1>Press A to start playing</h1>
+            <h1>Press A or tap screen to start playing</h1>
         </div>
         <div class="game-field">
             <div class="box box-green"></div>
